tests/baselines/reference/stringLiteralTypesInUnionTypes03.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralTypesInUnionTypes03.ts(16,9): error TS2322: Type 'string | number' is not assignable to type 'number | "foo" | "bar"'.
  Type 'string' is not assignable to type 'number | "foo" | "bar"'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralTypesInUnionTypes03.ts (1 errors) ====
    
    type T = number | "foo" | "bar";
    
    var x: "foo" | "bar" | number;
    var y: T = undefined;
    
    if (x === "foo") {
        let a = x;
    }
    else if (x !== "bar") {
        let b = x || y;
    }
    else {
        let c = x;
        let d = y;
        let e: (typeof x) | (typeof y) = c || d;
            ~
!!! error TS2322: Type 'string | number' is not assignable to type 'number | "foo" | "bar"'.
!!! error TS2322:   Type 'string' is not assignable to type 'number | "foo" | "bar"'.
    }
    
    x = y;
    y = x;